# GradientPlanning

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GITHUB_READY.md  GITHUB_SETUP.md  IMPROVEMENTS.md  MANIFEST.in  MEDIUM_EFFORT_STATUS.md  MPS_ACCELERATION.md  NEXT_STEPS.md  PAPER_COMPARISON.md  PRE_PUSH_CHECKLIST.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  RESULTS.md  STATUS.md  SUMMARY.md  config.py  create_comparison_plot.py  demo.py  eval_all.py  eval_real_robot.py  pyproject.toml  reproduce.py  requirements.txt  run_demo.sh  setup.py  test_improvements.py  test_mps.py  visual_demo.py  visualize_loss_landscape.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python.yml
checkpoints_wall/: baseline_best.pt  baseline_final.pt  online_final.pt  online_iter_1.pt  online_iter_2.pt
docs/: blog.md
results/: eval_all.json  results_adversarial_gbp.txt  results_baseline_cem.txt  results_baseline_gbp.txt  results_online_gbp.txt
src/data/: __init__.py  make_expert_data.py
src/envs/: __init__.py  pointmaze.py  pusht.py  wall_door.py
src/eval/: eval_planning.py
src/models/: __init__.py  dinov2_encoder.py  encoders.py  transformer_world_model.py  world_model.py
src/planners/: __init__.py  cem.py  gbp.py  gbp_improved.py
src/robots/: __init__.py  base.py  franka.py  sim_robot.py
src/train/: train_adversarial.py  train_baseline.py  train_combined.py  train_online.py  train_real_robot.py
src/utils/: __init__.py  device.py  metrics.py  (+3 more)
